force-app/main/default/objects/Debug_Event__e/Debug_Event__e.object-meta.xml
<CustomObject>
    <label>Debug Event</label>
    <pluralLabel>Debug Events</pluralLabel>
</CustomObject>