force-app/main/default/objects/Debug_Event__e/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <label>Created By Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>