force-app/main/default/objects/Debug_Event__e/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <label>Log Level</label>
    <length>15</length>
    <type>Text</type>
</CustomField>