force-app/main/default/objects/Debug_Event__e/fields/Log_Lines__c.field-meta.xml
<CustomField>
    <fullName>Log_Lines__c</fullName>
    <label>Log Lines</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>