force-app/main/default/objects/Debug_Event__e/fields/Log_Location__c.field-meta.xml
<CustomField>
    <fullName>Log_Location__c</fullName>
    <label>Log_Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>