force-app/main/default/objects/Debug_Event__e/fields/Salesforce_Execution_Context__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Execution_Context__c</fullName>
    <label>Salesforce Execution Context</label>
    <length>50</length>
    <type>Text</type>
</CustomField>