force-app/main/default/objects/Debug_Event__e/fields/Salesforce_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Request_Id__c</fullName>
    <label>Salesforce Request Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>