force-app/main/default/objects/Debug_Event__e/fields/Trace_Id__c.field-meta.xml
<CustomField>
    <fullName>Trace_Id__c</fullName>
    <label>Trace Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>